agrona with specs